--- a/src/main/resources/templates/UserPages/SketchList.html
+++ b/src/main/resources/templates/UserPages/SketchList.html
@@ -505,6 +505,10 @@
                                         <th class="text-start fw-bold">ID</th>
                                         <th class="text-start fw-bold">NOMBRE</th>
                                         <th class="text-start fw-bold">DESCRIPCIÓN</th>
+                                        <th class="text-start fw-bold">VCPUs</th>
+                                        <th class="text-start fw-bold">RAM</th>
+                                        <th class="text-start fw-bold">DISCO</th>
+                                        <th class="text-start fw-bold">VMs</th>
                                         <th class="text-start fw-bold">FECHA DE CREACIÓN</th>
                                         <th class="text-start fw-bold">ÚLTIMA EDICIÓN</th>
                                         <th class="text-center fw-bold">ACCIONES</th>
