--- a/src/main/resources/templates/AdminPages/SlicesList.html
+++ b/src/main/resources/templates/AdminPages/SlicesList.html
@@ -6,6 +6,7 @@
     <title>OpenCluster - Gestión de Slices</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" th:href="@{/css/admin-styles.css}">
+
 </head>
 <body>
     <div class="app-container">
@@ -48,7 +49,7 @@
                                 <i class="fas fa-search"></i>
                             </button>
                         </div>
-                        
+
                         <div class="table-container">
                             <table>
                                 <thead>
@@ -127,7 +128,7 @@
                                 </tbody>
                             </table>
                         </div>
-                        
+
                         <div class="pagination">
                             <div class="pagination-info">
                                 Mostrando 1-3 de 3 elementos
@@ -315,7 +316,7 @@
                         </div>
 
                         <div class="table-container">
-                            <table>
+                            <table id="generalSlicesTable" class="table table-striped" style="width:100%">
                                 <thead>
                                     <tr>
                                         <th>ID <i class="fas fa-sort"></i></th>
@@ -328,32 +329,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td>#SL-738</td>
-                                        <td>Project-Alpha</td>
-                                        <td>Laura Martínez</td>
-                                        <td>OpenStack</td>
-                                        <td>6 vCPU, 12GB RAM</td>
-                                        <td><span class="badge badge-active">Activo</span></td>
-                                        <td class="actions">
-                                            <button class="action-btn" title="Ver">
-                                                <i class="fas fa-eye"></i>
-                                            </button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>#SL-712</td>
-                                        <td>Project-Beta</td>
-                                        <td>Pedro Sánchez</td>
-                                        <td>AWS</td>
-                                        <td>4 vCPU, 8GB RAM</td>
-                                        <td><span class="badge badge-active">Activo</span></td>
-                                        <td class="actions">
-                                            <button class="action-btn" title="Ver">
-                                                <i class="fas fa-eye"></i>
-                                            </button>
-                                        </td>
-                                    </tr>
+
                                 </tbody>
                             </table>
                         </div>
@@ -415,6 +391,18 @@
     
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- DataTables -->
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
+    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+
+    <!-- Botones y estilos extra para DataTables -->
+    <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.4.1/css/buttons.dataTables.min.css">
+    <script src="https://cdn.datatables.net/buttons/2.4.1/js/dataTables.buttons.min.js"></script>
+    <script th:src="@{/js/admin/slices-management.js}"></script>
+
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // Referencias de elementos DOM
