--- a/src/main/resources/templates/UserPages/SliceView.html
+++ b/src/main/resources/templates/UserPages/SliceView.html
@@ -524,14 +524,13 @@
                                     <p class="text-md mb-0 font-weight-bold">Servidor Físico: <span class="font-weight-normal" id="vmModalPhysicalServer">-</span></p>
                                     <p class="text-md mb-0 font-weight-bold">QEMU PID: <span class="font-weight-normal" id="vmModalQemuPid">-</span></p>
                                     <p class="text-md mb-0 font-weight-bold">VNC Display: <span class="font-weight-normal" id="vmModalVncDisplay">-</span></p>
+                                    <p class="text-md mb-0 font-weight-bold">SSH IP: <span class="font-weight-normal" id="vmModalSshIp">-</span></p>
                                 </div>
                             </div>
                             <div class="col-4 text-end d-flex flex-column justify-content-center">
                                 <div id="vmModalStatus" class="mb-2 mt-3">
-                                    <!-- Status badge will be inserted here -->
                                 </div>
                                 <div id="vmModalExternalAccess" class="">
-                                    <!-- Badge for external access will be inserted here -->
                                 </div>
                             </div>
                         </div>
@@ -776,7 +775,7 @@
                                           <i class="material-symbols-rounded text-warning">hub</i>
                                       </span>
                                         <div class="timeline-content">
-                                            <h6 class="text-secondary text-md font-weight-bold mb-0">BRIDGE y VLAN</h6>
+                                            <h6 class="text-secondary text-md font-weight-bold mb-0">BRIDGE</h6>
                                             <p class="text-secondary text-md mt-1 mb-0">
                                                 Bridge Interno: <span id="sliceModalBridgeName" class="font-weight-bold">-</span>
                                             </p>
@@ -790,10 +789,10 @@
                                           <i class="material-symbols-rounded text-warning">lan</i>
                                       </span>
                                         <div class="timeline-content">
-                                            <h6 class="text-secondary text-md font-weight-bold mb-0">RED</h6>
+                                            <h6 class="text-secondary text-md font-weight-bold mb-0">RED DEL SLICE</h6>
 
                                             <p class="text-secondary text-md mt-1 mb-0">
-                                                Red Externa: <span id="sliceModalNetwork" class="font-weight-bold">-</span>
+                                                Red: <span id="sliceModalNetwork" class="font-weight-bold">-</span>
                                             </p>
                                             <div class="d-flex mt-2">
                                                 <div class="me-4">
