--- a/src/main/resources/templates/UserPages/SketchView.html
+++ b/src/main/resources/templates/UserPages/SketchView.html
@@ -254,7 +254,7 @@
                         <div class="card-header p-3 bg-gradient-dark">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <h6 class="mb-0 text-white">Workspace</h6>
+                                    <h6 class="mb-0 text-white">Viewspace</h6>
                                     <p class="text-white text-sm mb-0">Área interactiva para visualizar tu red</p>
                                 </div>
                             </div>
